@@ -10,6 +10,7 @@ Changes between 1.3.4 and 2.0.0dev0
 - use apipkg-1.1 and make py.apipkg.initpkg|ApiModule available
 - add py.iniconfig module for brain-dead easy ini-config file parsing
 - introduce py.builtin.any()
+- path objects have a .dirname attribute now
 
 Changes between 1.3.3 and 1.3.4
 ==================================================
